[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SettingsMenuGUI.gd" type="Script" id=2]

[node name="SettingsMenuGUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 480 )
rect_pivot_offset = Vector2( -368.353, -6.04575 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="SettingsContainer"]
margin_top = 170.0
margin_right = 560.0
margin_bottom = 230.0
size_flags_horizontal = 5
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="Music" type="HBoxContainer" parent="SettingsContainer/Settings"]
margin_right = 560.0
margin_bottom = 20.0

[node name="MusicLabel" type="Label" parent="SettingsContainer/Settings/Music"]
margin_right = 278.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Music Volume: (75%)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/Settings/Music"]
margin_left = 282.0
margin_right = 560.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 75.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Sfx" type="HBoxContainer" parent="SettingsContainer/Settings"]
margin_top = 40.0
margin_right = 560.0
margin_bottom = 60.0

[node name="SfxLabel" type="Label" parent="SettingsContainer/Settings/Sfx"]
margin_right = 278.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sfx Volume: (75%)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxSlider" type="HSlider" parent="SettingsContainer/Settings/Sfx"]
margin_left = 282.0
margin_right = 560.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 75.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="ActionButtons" type="VBoxContainer" parent="SettingsContainer"]
margin_top = 308.0
margin_right = 560.0
margin_bottom = 400.0
size_flags_horizontal = 7
size_flags_vertical = 8
custom_constants/separation = 10
alignment = 1

[node name="SavedLabel" type="Label" parent="SettingsContainer/ActionButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 560.0
margin_bottom = 20.0
text = "Saved!"
align = 1

[node name="SaveButton" type="Button" parent="SettingsContainer/ActionButtons"]
margin_left = 253.0
margin_top = 30.0
margin_right = 307.0
margin_bottom = 56.0
size_flags_horizontal = 4
text = "Save"

[node name="CloseButton" type="Button" parent="SettingsContainer/ActionButtons"]
margin_left = 251.0
margin_top = 66.0
margin_right = 309.0
margin_bottom = 92.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Close"

[connection signal="value_changed" from="SettingsContainer/Settings/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/Settings/Sfx/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="button_up" from="SettingsContainer/ActionButtons/SaveButton" to="." method="_on_SaveButton_button_up"]
[connection signal="button_up" from="SettingsContainer/ActionButtons/CloseButton" to="." method="_on_CloseButton_button_up"]
